Reinitialized css folder and node_modules.

--- a/src/stylesheets/scss/_fluids.scss
+++ b/src/stylesheets/scss/_fluids.scss
@@ -19,7 +19,7 @@ body{
   margin: 0 auto;
 }
 
-#fluids-text-container {
+.text-container {
     width: 307px;
     height: 45px;
     @include flexProps($dir: row, $just: space-around, $align: center);
