--- a/src/stylesheets/scss/_app.scss
+++ b/src/stylesheets/scss/_app.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Muli');
+
 html {
   height: 100%;
 }
@@ -8,8 +10,9 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center; /*centers items on the line (the x-axis by default)*/
-  align-items: center; /*centers items on the cross-axis (y by default)*/
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(to bottom, rgba(250, 145, 97, 0.7), rgba(247, 59, 28, 0.69));
 }
 
 .toggle-container {
@@ -36,24 +39,27 @@ body {
     text-align: center;
     color: #00b093;
     line-height: 18px;
+    z-index: 99999;
 }
 
-#switch-container {
+.switch-container {
     position: relative;
     display: inline-block;
     width: 307px;
     height: 45px;
+    margin-top: 10px;
     margin-bottom: 6.25px;
     margin-right: 6.25px;
     border-radius: 100px;
     border: solid 1px #fbfbfb;
+    cursor: pointer;
 }
 
 .toggle {
     display: none;
 }
 
-#slider {
+.slider {
     top: 0;
     left: 0;
     right: 0;
@@ -66,7 +72,7 @@ body {
     cursor: pointer;
 }
 
-#slider:before {
+.slider:before {
     width: 163px;
     height: 45px;
     border-radius: 100px;
@@ -78,8 +84,43 @@ body {
     transition: .5s;
 }
 
-.toggle:checked + #slider:before {
+.toggle:checked + .slider:before {
     -webkit-transform: translateX(144px);
     -ms-transform: translateX(144px);
     transform: translateX(144px);
+}
+
+.answer-container {
+  width: 307px;
+  height: 18px;
+  margin-top: 20px;
+  font-family: Muli;
+  font-size: 13px;
+  letter-spacing: 0.4px;
+  text-align: center;
+}
+
+.answer-text {
+    color: white;
+    font-weight: bold;
+}
+
+.title-container {
+    width: 307px;
+    height: 18px;
+    margin-bottom: 20px;
+    font-family: Muli;
+    font-weight: bold;
+    font-size: 14px;
+    letter-spacing: 0.4px;
+    text-align: center;
+    color: white;
+}
+
+.incorrect {
+  color: #20b298;
+}
+
+.correct {
+  color: #ffffff;
 }
