Minor tweaks and completed sass refactoring.

--- a/src/stylesheets/scss/main.scss
+++ b/src/stylesheets/scss/main.scss
@@ -1,3 +1,4 @@
-@import 'mixins';
-@import 'app';
-@import 'toggle';
+@import 'utilities/variables';
+@import 'utilities/mixins';
+@import 'base/base';
+@import 'containers/app';
